--- a/src/view/contains/ViewBanHang.form
+++ b/src/view/contains/ViewBanHang.form
@@ -1280,7 +1280,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Lo&#x1ea1;i th&#x1ec3; thao "/>
+            <Property name="text" type="java.lang.String" value="Lo&#x1ea1;i &#xc1;o"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cboLocSanPham">
